--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,10 +9,17 @@
 body {
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
 section {
 	text-align: center;
+}
+
+.title {
+	margin: 10px auto;
+	text-transform: uppercase;
+	font-weight: 600;
 }
 
 #menu span {
@@ -55,6 +62,11 @@ section {
 	border: 1px solid #C1C1C1;
 }
 
+#loadpic,
+.input-source-url {
+	height: 25px;
+}
+
 .start_button,
 input[type="text"],
 input[type="file"] {
@@ -72,11 +84,11 @@ input[type="file"] {
 	display: none;
 }
 
-.load-file-label {
+.upload-file-label {
 	display: block;
 	width: 50%;
 	font-size: 20px;
-	padding: 5px 10px;
+	padding: 0 10px;
 	border-radius: 5px;
 	border: 2px solid #4A7DBD;
 	border-bottom: 4px solid #4A7DBD;
@@ -91,37 +103,93 @@ input[type="file"] {
 .previewimage {
 	display: block;
     max-width: 100%;
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     margin: 10px auto;
     border: 5px solid #0F6FC5;
 }
 
 .collection {
 	width: 60%;
-	height: 75px;
+	height: 90px;
+	margin: 0 auto 10px auto;
+	
+}
+
+.collection-items-list {
+	height: 100%;
+	max-width: 80%;
 	border-top: 1px solid #000;
 	border-bottom: 1px solid #000;
-	margin: 0 auto 10px auto;
-	overflow-x: none;
-	overflow-y: auto;
+	margin: 0;
+	overflow-x: auto;
+	overflow-y: hidden; 
 }
 
-.collection .prevPic,
-.collection .nextPic {
+.collection-items-list ul {
 	height: 100%;
-	width: 25px;
-	border: 1px solid #FF0D0D;
+	width: 100%;
+	list-style: none;
 }
 
-.collection .prevPic {
+.collection-items-list ul>li {
+	/*float: left;*/
+	/*display: inline-block;*/
+	display: inline-block;
+	float: left;
+	margin-right: 10px;
+	height: 100%;
+}
+
+.collection-items-list ul>li:last-child {
+	margin-right: 0;
+} 
+
+.collection-items-list ul>li>img {
+	margin-top: 15%;
+	height: 70%;
+}
+
+.collection-items-list,
+.prevPic,
+.nextPic {
+	display: inline-block;
+	float: left;
+}
+
+.prevPic,
+.nextPic {
+	height: 100%;
+	width: 10%;
+	/*border: 1px solid #FF0D0D;*/
+	font-weight: 600;
+	background: rgba(255, 255, 255, .25);
+	padding-top: 5%;
+	margin: 0;
+	cursor: pointer;	
+}
+
+.prevPic span,
+.nextPic span {
+	display: block;
+	width: 25px;
+	height: 25px;
+	border: 1px solid #000;
+	border-radius: 100%;
+}
+
+.nextPic span {
+	float: right;
+}
+
+/*.collection .prevPic {
 	float: left;
 }
 
 .collection .nextPic {
 	float: right;
 }
-
+*/
 @media screen and (max-width: 500px) {
     .previewimage {
         max-width: 100%;
@@ -135,4 +203,10 @@ input[type="file"] {
     	width: 100%;
     	height: 50px;
     }
+}
+
+@media screen and (max-width: 450px) and (max-height: 525px) {
+	h1.title {
+		display: none;
+	}
 }
