--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,58 +13,62 @@ body {
 }
 
 section {
-	text-align: center;
+    text-align: center;
 }
 
 .title {
-	margin: 10px auto;
-	text-transform: uppercase;
-	font-weight: 600;
+    margin: 10px auto;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.selected-item {
+    border: 3px solid #0F6FC5;
+}
+
+.collection-item {
+    cursor: pointer;
 }
 
 #menu span {
-	display: block;
+    display: block;
 }
 
-#menu .content{
-	max-width: 300px;
-	margin: 0 auto;
+#menu .content {
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 #menu .content input[type="radio"] {
-	margin-left: 10px;
-}
-
-#puzzle {
-    border: 1px solid #000;
     margin-left: 10px;
 }
 
-#puzzle, .previewimage {
+#puzzle,
+.previewimage {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 }
 
 #loadpic {
-	text-transform: uppercase;
-	margin-left: -5px;
-	padding: 0 5px;
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-	border: 1px solid #ADADAD;
+    text-transform: uppercase;
+    margin-left: -5px;
+    padding: 0 5px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border: 1px solid #ADADAD;
 }
 
 .input-source-url {
-	outline: none;
-	border-top-left-radius: 3px;
-	border-bottom-left-radius: 3px;
-	border: 1px solid #C1C1C1;
+    outline: none;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border: 1px solid #C1C1C1;
 }
 
 #loadpic,
 .input-source-url {
-	height: 25px;
+    height: 25px;
 }
 
 .start_button,
@@ -73,35 +77,44 @@ input[type="file"] {
     margin-bottom: 10px;
 }
 
+.start_button,
+.upldbtn {
+    display: block;
+    margin: 5px auto;
+}
+
+.upldbtn {
+    width: 60%;
+}
+
 .start_button {
-	display: block;
-	margin: 10px auto 10px auto;
+	width: 80%;
 }
 
 .file-upload {
-	position: fixed;
-	top: -1000px;
-	display: none;
+    position: fixed;
+    top: -1000px;
+    display: none;
 }
 
 .upload-file-label {
-	display: block;
-	width: 50%;
-	font-size: 20px;
-	padding: 0 10px;
-	border-radius: 5px;
-	border: 2px solid #4A7DBD;
-	border-bottom: 4px solid #4A7DBD;
-	background: #B7DCED;
-	font-weight: 600;
-	text-transform: uppercase;
-	cursor: pointer;
-	margin: 0 auto;
-	margin-bottom: 10px;
+    display: block;
+    width: 50%;
+    font-size: 20px;
+    padding: 0 10px;
+    border-radius: 5px;
+    border: 2px solid #4A7DBD;
+    border-bottom: 4px solid #4A7DBD;
+    background: #B7DCED;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .previewimage {
-	display: block;
+    display: block;
     max-width: 100%;
     width: 250px;
     height: 250px;
@@ -110,86 +123,77 @@ input[type="file"] {
 }
 
 .collection {
-	width: 60%;
-	height: 90px;
-	margin: 0 auto 10px auto;
-	
+    width: 60%;
+    height: 100px;
+    margin: 0 auto;
 }
 
 .collection-items-list {
-	height: 100%;
-	max-width: 80%;
-	border-top: 1px solid #000;
-	border-bottom: 1px solid #000;
-	margin: 0;
-	overflow-x: auto;
-	overflow-y: hidden; 
+    height: 100%;
+    max-width: 80%;
+    margin: 0;
+    overflow: hidden;
 }
 
 .collection-items-list ul {
-	height: 100%;
-	width: 100%;
-	list-style: none;
+    height: 100%;
+    width: 100%;
+    list-style: none;
+    position: relative;
+    left: 0;
 }
 
 .collection-items-list ul>li {
-	/*float: left;*/
-	/*display: inline-block;*/
-	display: inline-block;
-	float: left;
-	margin-right: 10px;
-	height: 100%;
+    display: inline-block;
+    float: left;
+    margin-right: 10px;
+    height: 100%;
 }
 
 .collection-items-list ul>li:last-child {
-	margin-right: 0;
-} 
+    margin-right: 0;
+}
 
 .collection-items-list ul>li>img {
-	margin-top: 15%;
-	height: 70%;
+    margin-top: 15%;
+    height: 70%;
 }
 
 .collection-items-list,
-.prevPic,
-.nextPic {
-	display: inline-block;
-	float: left;
+#prevPic,
+#nextPic {
+    display: inline-block;
+    float: left;
 }
 
-.prevPic,
-.nextPic {
-	height: 100%;
-	width: 10%;
-	/*border: 1px solid #FF0D0D;*/
-	font-weight: 600;
-	background: rgba(255, 255, 255, .25);
-	padding-top: 5%;
-	margin: 0;
-	cursor: pointer;	
+#prevPic,
+#nextPic {
+    height: 100%;
+    width: 10%;
+    font-weight: 600;
+    background: rgba(255, 255, 255, .25);
+    margin: 0;
+    cursor: pointer;
 }
 
-.prevPic span,
-.nextPic span {
-	display: block;
-	width: 25px;
-	height: 25px;
-	border: 1px solid #000;
-	border-radius: 100%;
+#prevPic span,
+#nextPic span {
+    display: block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid #000;
+    border-radius: 100%;
+    margin-top: 30px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-.nextPic span {
-	float: right;
+#nextPic span {
+    float: right;
 }
 
-/*.collection .prevPic {
-	float: left;
-}
-
-.collection .nextPic {
-	float: right;
-}
-*/
 @media screen and (max-width: 500px) {
     .previewimage {
         max-width: 100%;
@@ -198,15 +202,19 @@ input[type="file"] {
         margin-top: 5px;
         margin-left: auto;
     }
-
     .collection {
-    	width: 100%;
-    	height: 50px;
+        width: 90%;
+        height: 50px;
+    }
+
+    #prevPic span,
+    #nextPic span {
+        margin-top: 10px;
     }
 }
 
 @media screen and (max-width: 450px) and (max-height: 525px) {
-	h1.title {
-		display: none;
-	}
+    h1.title {
+        font-size: 14pt;
+    }
 }
