--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,7 +40,7 @@ section {
 }
 
 #menu .content input[type="radio"] {
-    margin-left: 10px;
+    margin: 0 5px 0 10px;
 }
 
 #puzzle,
@@ -78,7 +78,8 @@ input[type="file"] {
 }
 
 .start_button,
-.upldbtn {
+.upldbtn,
+.to_res_btn {
     display: block;
     margin: 5px auto;
 }
@@ -89,6 +90,10 @@ input[type="file"] {
 
 .start_button {
 	width: 80%;
+}
+
+.to_res_btn {
+	width: 200px;
 }
 
 .file-upload {
@@ -217,4 +222,11 @@ input[type="file"] {
     h1.title {
         font-size: 14pt;
     }
+}
+
+@media screen and (max-width: 450px) and (min-height: 500px) and (max-height: 750px) {
+	#previewpic {
+		width: 225px;
+		height: 225px;
+	}
 }
