finished basic UI

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -199,6 +199,10 @@ input[type="file"] {
     float: right;
 }
 
+.swnum {
+	font-weight: 600;
+}
+
 @media screen and (max-width: 500px) {
     .previewimage {
         max-width: 100%;
