--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -34,14 +34,14 @@ section {
     display: block;
 }
 
-#imgloadingfail {
+#imageLoadingFail {
     width: 300px;
     height: 175px;
     padding: 0 10px;
     margin: 10px auto;
 }
 
-#imgloadingfail h1 {
+#imageLoadingFail h1 {
     color: #f00;
 }
 
@@ -54,14 +54,14 @@ section {
     margin: 0 5px 0 10px;
 }
 
-#puzzle,
+canvas,
 .previewimage {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
 }
 
-#loadpic {
+#getImageByURLButton {
     text-transform: uppercase;
     margin-left: -5px;
     padding: 0 5px;
@@ -70,7 +70,7 @@ section {
     border: 1px solid #ADADAD;
 }
 
-.input-source-url {
+.source-url {
     outline: none;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
@@ -78,37 +78,32 @@ section {
     padding-left: 5px;
 }
 
-#loadpic,
-.input-source-url {
+#getImageByURLButton,
+.source-url {
     height: 25px;
 }
 
-.start_button,
 input[type="text"],
 input[type="file"] {
     margin-bottom: 10px;
 }
 
-.start_button,
-.upldbtn,
-.to_res_btn {
+.start-button,
+.upload-button {
     display: block;
     margin: 5px auto;
 }
 
-.upldbtn {
+.upload-button {
     width: 60%;
 }
 
-.start_button {
+.start-button {
     width: 80%;
+    margin: 0 auto;
 }
 
-.to_res_btn {
-    width: 200px;
-}
-
-.file-upload {
+input[type="file"] {
     position: fixed;
     top: -1000px;
     display: none;
@@ -138,7 +133,7 @@ input[type="file"] {
     margin: 10px auto;
 }
 
-.collection {
+.collection-wrapper {
     width: 60%;
     height: 100px;
     margin: 0 auto;
@@ -159,7 +154,7 @@ input[type="file"] {
     left: 0;
 }
 
-.borderedpi {
+.bordered {
     border: 5px solid #0F6FC5;
 }
 
@@ -181,14 +176,14 @@ input[type="file"] {
 }
 
 .collection-items-list,
-#prevPic,
-#nextPic {
+#previousPictureButton,
+#nextPictureButton {
     display: inline-block;
     float: left;
 }
 
-#prevPic,
-#nextPic {
+#previousPictureButton,
+#nextPictureButton {
     height: 100%;
     width: 10%;
     font-weight: 600;
@@ -197,8 +192,8 @@ input[type="file"] {
     cursor: pointer;
 }
 
-#prevPic span,
-#nextPic span {
+#previousPictureButton span,
+#nextPictureButton span {
     display: block;
     width: 25px;
     height: 25px;
@@ -211,17 +206,18 @@ input[type="file"] {
     user-select: none;
 }
 
-#nextPic span {
+#nextPictureButton span {
     float: right;
 }
 
-.swnum {
+.swap-number {
     font-weight: 600;
     margin: 0;
 }
 
-#result_title {
-    margin: 0;
+#result-title {
+    margin: 0 auto;
+    max-width: 80%;
 }
 
 .concl {
@@ -232,19 +228,19 @@ input[type="file"] {
     margin: 0;
 }
 
-.game-buttons {
+.game-buttons-container {
     width: 512px;
     text-align: center;
     margin: 0 auto;
 }
 
-.game-buttons button {
+.game-buttons-container>button {
     display: inline-block;
     width: 40%;
     margin-right: 10%;
 }
 
-.game-buttons button:last-child {
+.game-buttons-container>button:last-child {
     margin-right: 0;
 }
 
@@ -256,7 +252,7 @@ input[type="file"] {
         margin-top: 5px;
         margin-left: auto;
     }
-    .collection {
+    .collection-wrapper {
         width: 90%;
         height: 50px;
     }
@@ -265,11 +261,11 @@ input[type="file"] {
         height: 40px;
         width: 40px;
     }
-    .game-buttons {
+    .game-buttons-container {
         width: 80%;
     }
-    #prevPic span,
-    #nextPic span {
+    #previousPictureButton span,
+    #nextPictureButton span {
         margin-top: 10px;
     }
 }
@@ -279,7 +275,7 @@ input[type="file"] {
         font-size: 14pt;
         margin-bottom: 0;
     }
-    #previewpic {
+    #previewPicture {
         margin-bottom: 0;
     }
     #game {
@@ -288,7 +284,7 @@ input[type="file"] {
 }
 
 @media screen and (max-width: 450px) and (min-height: 500px) and (max-height: 750px) {
-    #previewpic {
+    #previewPicture {
         width: 225px;
         height: 225px;
     }
